--- a/index.html
+++ b/index.html
@@ -152,12 +152,14 @@
         <div class="container">
 
             <div class="row">
-              <div class="col-md-4 col-lg-4">
+              <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 
                 <div itemscope itemtype="http://schema.org/LocalBusiness">
-	<h2 itemprop="name">Pongamonos en contacto</h2>
+	<h2 itemprop="name">Contacto</h2>
 <h3>  <i class="fas fa-mobile-alt fa-2x"></i> <span itemprop="telephone"><a href="tel:+573012840115">
 3012840115</a></span></h3>
+<h3> <i class="fas fa-envelope fa-2x"></i><span itemprop="email"><a href="mailto:s.andrespinto@gmail.com">s.andrespinto@gmail.com</a>
+</span></h3>
 </div>
                     <br><a href="https://goo.gl/maps/FU2aF">Medellin,CO</a>
                     <h3>En Redes Sociales</h3>
@@ -174,7 +176,7 @@
                         </li>
                         </ul>
               </div>
-                <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 box-contact" >
+                <div class="d-none d-sm-block col-xs-12 col-sm-12 col-md-8 col-lg-8 box-contact" >
                     <form role="form" method="post" action="https://formspree.io/s.andrespinto@gmail.com" >
                         <div class="row justify-content-md-center">
                             <div class="form-group col-sm-12 col-md-12 col-lg-12  floating-label-form-group">
