--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     </div>
     <script src="js/jquery-1.10.2.js"></script>
       <script src="js/bootstrap.min.js"></script>
-      <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
       <script src="js/classie.js"></script>
       <script src="js/cbpAnimatedHeader.min.js"></script>
       <script src="js/freelancer.js"></script>
