--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
                          <p  id="type-description" class="intro-text lead">
 
                              Tecnólogo en Producción Multimedia.  <br>
-                             Un apasionado del diseño web, estoy constantemente trabajando para mejorar mis habilidades, ampliar mis conocimientos y mantenerme al día con las tendencias actuales. <br>
-                             este espacio es dedicado mostrar mi portafolio. Gracias!
+                             Un apasionado por el mundo digital,me considero una persona emprendedora inquieta
+                              estoy constantemente trabajando para mejorar mis habilidades,
+                              ampliar mis conocimientos y mantenerme al día con las tendencias para aportar valor a los proyectos que participe. <br>
+                             Este espacio esta dedicado a mostrar mi portafolio.
+                             Espero les guste.
 
                          </p>
                           <div class=" page-scroll col-xs-12 col-sm-12 col-md-12 col-lg-12  text-center">
@@ -237,7 +240,7 @@
       <script src="js/typeit.min.js"></script>
       <script type="text/javascript">
       new TypeIt('#type-1', {
-  strings: [" Hola, Me llamo sergio pinto" ,"Diseñador web...", ],
+  strings: [" Hola, Soy Sergio Pinto" ,"Diseñador web...", ],
   speed: 120,
   breakLines: false,
   autoStart: false
