--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                              Un apasionado por el mundo digital,me considero una persona emprendedora inquieta
                               estoy constantemente trabajando para mejorar mis habilidades,
                               ampliar mis conocimientos y mantenerme al día con las tendencias para aportar valor a los proyectos que participe. <br>
-                             Este espacio esta dedicado a mostrar mi portafolio.
-                             Espero les guste.
+                             Este espacio esta dedicado a mostrar mi portafolio. <br>
+                             Espero les guste!
 
                          </p>
                           <div class=" page-scroll col-xs-12 col-sm-12 col-md-12 col-lg-12  text-center">
@@ -244,14 +244,6 @@
   speed: 120,
   breakLines: false,
   autoStart: false
-
-});
-
-new TypeIt('#type-1', {
-strings: [" Hola, Me llamo sergio pinto" ,"Diseñador web...", ],
-speed: 120,
-breakLines: false,
-autoStart: false
 
 });
 
