--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
             </div>
         </div>
     </header>
-
+    <svg id="bigTriangleColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 102" preserveAspectRatio="none">
+    				<path d="M0 0 L50 100 L100 0 Z"></path>
+    			</svg>
     <section id="portfolio">
         <div class="container">
             <div class="row">
@@ -150,7 +152,9 @@
             </div>
         </div>
     </section>
-
+    <svg id="curveUpColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
+    				<path d="M0 100 C 20 0 50 0 100 100 Z"></path>
+    			</svg>
     <section id="contact">
         <div class="container">
 
