--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <h3> <i class="fas fa-envelope fa-2x"></i><span itemprop="email"><a href="mailto:s.andrespinto@gmail.com">s.andrespinto@gmail.com</a>
 </span></h3>
 </div>
-                    <br><a href="https://goo.gl/maps/FU2aF">Medellin,CO</a>
+
                     <h3>En Redes Sociales</h3>
                     <ul class="list-inline">
                         <li class="list-inline-item"><a href="https://www.facebook.com/Serpinto" class="btn-social btn-outline" target="_blank">
@@ -223,7 +223,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; 2018 - sergio pinto
+                      <a href="https://goo.gl/maps/FU2aF">Medellin,CO</a>  Copyright &copy; 2018 - sergio pinto
                     </div>
                 </div>
             </div>
