--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4">
-                        <img class="img-fluid animated rubberBand" src="img/perfil.png" alt="sergio pinto profile">
+                        <img class="img-fluid animated rubberBand" src="img/profile.png" alt="sergio pinto profile">
                     </div>
                 <div class="col-sm-12 col-md-8 col-lg-8">
                     <div class="intro-text animated rubberBand">
