--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4">
-                        <img class="img-fluid" src="img/profile.svg" alt="sergio pinto profile">
+                        <img class="img-fluid " src="img/profile.svg" alt="sergio pinto profile">
                     </div>
                 <div class="col-sm-12 col-md-8 col-lg-8">
                     <div class="intro-text animated rubberBand">
@@ -230,7 +230,7 @@
         </div>
     </footer>
 
-    <div class="scroll-top page-scroll visible-xs visible-sm visible-lg">
+    <div class="scroll-top page-scroll visible-xs visble-sm">
         <a class="btn btn-primary" href="#page-top">
           <i class="fas fa-rocket"></i>
         </a>
@@ -239,7 +239,7 @@
       <script src="js/bootstrap.min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
       <script src="js/classie.js"></script>
-      <script src="js/cbpAnimatedHeader.min.js"></script>
+      <script src="js/cbpAnimatedHeader.js"></script>
       <script src="js/freelancer.js"></script>
       <script src="js/typeit.min.js"></script>
       <script type="text/javascript">
@@ -247,7 +247,7 @@
   strings: [" Hola, Soy Sergio Pinto" ,"Diseñador web...", ],
   speed: 120,
   breakLines: false,
-  autoStart: false
+  autoStart: true
 
 });
 
