--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                      <a href="https://goo.gl/maps/FU2aF">Medellin,CO</a>  Copyright &copy; 2018 - sergio pinto
+                      <a href="https://goo.gl/maps/FU2aF">Medellin,CO</a>   Copyright &copy; 2018 - sergio pinto
                     </div>
                 </div>
             </div>
         </div>
     </footer>
 
-    <div class="scroll-top page-scroll visible-xs visble-sm">
+    <div  id="Btn-top" onclick="topFunction()" class="scroll-top page-scroll visible-xs visble-sm">
         <a class="btn btn-primary" href="#page-top">
           <i class="fas fa-rocket"></i>
         </a>
@@ -253,6 +253,27 @@
 
 
       </script>
+
+
+      <script>
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+    if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
+        document.getElementById("Btn-top").style.display = "block";
+    } else {
+        document.getElementById("Btn-top").style.display = "none";
+    }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+}
+</script>
+
 
 </body>
 
