--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@ function scrollFunction() {
 function topFunction() {
     document.body.scrollTop = 0;
     document.documentElement.scrollTop = 0;
+     element.classList.add("scroll-top, page-scroll ");
+
 }
 </script>
 
