--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         </div>
     </footer>
 
-    <div  id="Btn-top" onclick="topFunction()" class="scroll-top page-scroll visible-xs visble-sm">
+    <div  id="Btn-top" onclick="topFunction()" class="scroll-top page-scroll ">
         <a class="btn btn-primary" href="#page-top">
           <i class="fas fa-rocket"></i>
         </a>
