--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
                         <hr class="star-light">
                          <p  id="type-description" class="intro-text lead">
 
-                             Tecnólogo en Producción Multimedia.  <br>
-                             Un apasionado por el mundo digital,me considero una persona emprendedora inquieta
-                              estoy constantemente trabajando para mejorar mis habilidades,
-                              ampliar mis conocimientos y mantenerme al día con las tendencias para aportar valor a los proyectos que participe. <br>
+   Tecnólogo en Producción Multimedia.  <br>
+   Un apasionado por el mundo digital, me considero una persona emprendedora inquieta estoy constantemente trabajando para mejorar mis habilidades,
+  ampliar mis conocimientos y mantenerme al día con las tendencias para aportar valor a los proyectos que participe. <br>
                              Este espacio esta dedicado a mostrar mi portafolio. <br>
                              Espero les guste!
 
@@ -161,25 +160,24 @@
             <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 
-                <div itemscope itemtype="http://schema.org/LocalBusiness">
-	<h2 itemprop="name">Contacto</h2>
-<h3>  <i class="fas fa-mobile-alt fa-2x"></i> <span itemprop="telephone"><a href="tel:+573012840115">
-3012840115</a></span></h3>
-<h3> <i class="fas fa-envelope fa-2x"></i><span itemprop="email"><a href="mailto:s.andrespinto@gmail.com">s.andrespinto@gmail.com</a>
-</span></h3>
-</div>
+	<h2 >Contacto</h2>
+  <br>
+<h4 >  <i class="fas fa-mobile-alt fa-1x"></i>  <a  class="a-color" href="tel:+573012840115">
+3012840115</a></h4>
+<h5 > <i class="fas fa-envelope fa-1x"></i>  <a  class="a-color" href="mailto:s.andrespinto@gmail.com">s.andrespinto@gmail.com</a>
+</h5>
+<br>
+
 
                     <h3>En Redes Sociales</h3>
                     <ul class="list-inline">
+
+                                              <li class="list-inline-item"><a href="https://www.linkedin.com/in/siopinto/" class="btn-social btn-outline" target="_blank">
+                                              <i class="fab fa-linkedin-in"></i></i></a>
+                                              </li>
+
                         <li class="list-inline-item"><a href="https://www.facebook.com/Serpinto" class="btn-social btn-outline" target="_blank">
                           <i class="fab fa-facebook-f"></i></a>
-                        </li>
-                        <li class="list-inline-item"><a href="https://plus.google.com/u/0/+SergioAndresOrtizPinto/posts" class="btn-social btn-outline" target="_blank">
-                          <i class="fab fa-google-plus-g"></i></a>
-                        </li>
-
-                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/siopinto/" class="btn-social btn-outline" target="_blank">
-                        <i class="fab fa-linkedin-in"></i></i></a>
                         </li>
                         </ul>
               </div>
@@ -208,7 +206,7 @@
                         <div class="row ">
                             <div class="form-group col-xs-12">
                               <input type="hidden" name="_language" value="es" />
-                                <button type="submit" name="submit" class="btn btn-lg btn-success" value="send">Enviar</button>
+                                <button type="submit" name="submit" class="btn btn-lg btn-primary" value="send">Enviar</button>
                             </div>
                         </div>
                     </form>
@@ -223,16 +221,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                      <a href="https://goo.gl/maps/FU2aF">Medellin,CO</a>   Copyright &copy; 2018 - sergio pinto
+                      <a href="https://goo.gl/maps/FU2aF"><i class="fas fa-heart"></i> Medellin, CO</a>   <br>Copyright &copy; 2018 - sergio pinto
                     </div>
                 </div>
             </div>
         </div>
     </footer>
 
-    <div  id="Btn-top" onclick="topFunction()">
-        <a class="btn btn-primary" href="#page-top">
-          <i class="fas fa-rocket"></i>
+  	<a href="#0" class="cd-top js-cd-top">Top</a>
+
         </a>
     </div>
     <script src="js/jquery-1.10.2.js"></script>
@@ -254,27 +251,6 @@
 
       </script>
 
-
-      <script>
-// When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-    if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
-        document.getElementById("Btn-top").style.display = "block";
-    } else {
-        document.getElementById("Btn-top").style.display = "none";
-    }
-}
-
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-    document.body.scrollTop = 0;
-    document.documentElement.scrollTop = 0;
-     element.classList.add("scroll-top, page-scroll ");
-
-}
-</script>
 
 
 </body>
